--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424; */
-  color: #212121;
+  /* color: #212121; */
+  /* color: #efefef; */
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
