--- a/src/components/commons/DateTimePicker/datetimepicker.css
+++ b/src/components/commons/DateTimePicker/datetimepicker.css
@@ -15,7 +15,7 @@
   position: relative;
   z-index: 100;
   background: white;
-  padding: 10px;
+  padding: 30px 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
