feat(alarm): change constanta day value to enum and name for the day name, handling default selected days to all days when add new alarm, add overlay background and prevent pointer of the background

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body.overlay-active {
+  pointer-events: none;
+}
+
+body.overlay-active .overlay-picker {
+  pointer-events: auto !important;
+}
+
 a {
   font-weight: 500;
   color: #000080;
