refactor router & layout, add android assets

--- a/src/components/commons/DateTimePicker/datetimepicker.css
+++ b/src/components/commons/DateTimePicker/datetimepicker.css
@@ -16,6 +16,8 @@
   position: relative;
   z-index: 100;
   background: white;
+  min-width: 90%;
+  max-width: 500px;
   padding: 30px 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
